# os_2411

./: .gitmodules  README.md
backend/: hello.py  index.html  pyproject.toml  server.py
backend/instance-segmentation/: .gitignore  frame.py  movie.py  pyproject.toml
frontend/.utmp/RelWithDebInfo/s4n1e6e9/: hash_key.txt
frontend/.utmp/RelWithDebInfo/s4n1e6e9/arm64-v8a/: .ninja_deps  .ninja_log  CMakeCache.txt  additional_project_files.txt  android_gradle_build.json  android_gradle_build_mini.json  build.ninja  build_file_index.txt  cmake_install.cmake  compile_commands.json  metadata_generation_command.txt  prefab_config.json  symbol_folder_index.txt
frontend/.utmp/RelWithDebInfo/s4n1e6e9/arm64-v8a/.cmake/api/v1/reply/: cache-v2-1cd6d1cdf343c33e9ccf.json  cmakeFiles-v1-0a1d781eaaedd4d1d9f7.json  codemodel-v2-5ba0c175329babc6a337.json  index-2024-10-25T07-15-53-0566.json  target-game-RelWithDebInfo-3115927756ddb0ed4040.json
frontend/.utmp/RelWithDebInfo/s4n1e6e9/arm64-v8a/GameActivity/: cmake_install.cmake
frontend/.utmp/RelWithDebInfo/s4n1e6e9/prefab/arm64-v8a/prefab/lib/aarch64-linux-android/cmake/game-activity/: game-activityConfig.cmake
frontend/Assets/Scenes/: CalibrationScene.unity
frontend/Assets/Scripts/: Avatar.cs
frontend/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
frontend/ProjectSettings/: ProjectSettings.asset
